// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlantPage component Test render plant page component snapshot  1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "height": 1334,
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
          }
        }
      >
        <ScrollView
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            Array [
              Object {
                "padding": undefined,
              },
              undefined,
            ]
          }
          contentInset={
            Object {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={false}
          enableResetScrollToCoords={true}
          extraHeight={75}
          extraScrollHeight={0}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="handled"
          keyboardSpace={0}
          resetScrollToCoords={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          scrollEventThrottle={1}
          showsVerticalScrollIndicator={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            }
          }
          viewIsInsideTabBar={false}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "borderBottomWidth": 0.5,
                  "borderColor": "#ccc",
                  "borderLeftWidth": 0.5,
                  "borderRadius": 2,
                  "borderRightWidth": 0.5,
                  "borderTopWidth": 0.5,
                  "elevation": 3,
                  "flexWrap": "nowrap",
                  "marginBottom": 5,
                  "marginLeft": 2,
                  "marginRight": 2,
                  "marginTop": 5,
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.1,
                  "shadowRadius": 1.5,
                },
                Object {
                  "flex": 0,
                  "marginTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fff",
                    "borderRadius": 2,
                    "flexDirection": "row",
                    "paddingBottom": 10,
                    "paddingLeft": 15,
                    "paddingRight": 15,
                    "paddingTop": 10,
                  },
                  Object {
                    "borderBottomColor": "#A1DEC0",
                    "borderBottomWidth": 1,
                    "borderStyle": "solid",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": null,
                      "alignSelf": "center",
                      "flex": 1,
                      "marginLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontFamily": "System",
                          "fontSize": 16,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Treatment:
                  </Text>
                  <Text
                    note={true}
                    style={
                      Array [
                        Object {
                          "color": "#808080",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "marginRight": 20,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Water the cucumbers until the soil is thoroughly absorbed and maintain this moisture at all times.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fff",
                    "borderRadius": 2,
                    "flexDirection": "row",
                    "paddingBottom": 10,
                    "paddingLeft": 15,
                    "paddingRight": 15,
                    "paddingTop": 10,
                  },
                  Object {
                    "borderBottomColor": "#A1DEC0",
                    "borderBottomWidth": 1,
                    "borderStyle": "solid",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "stretch",
                    "flex": 1,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://img.wcdn.co.il/f_auto,w_1200,t_54/1/4/9/8/1498895-46.jpg",
                    }
                  }
                  style={
                    Object {
                      "height": 350,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderRadius": 2,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": null,
                      "alignSelf": "center",
                      "flex": 1,
                      "marginLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontFamily": "System",
                          "fontSize": 16,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Some words on it:
                  </Text>
                  <Text
                    note={true}
                    style={
                      Array [
                        Object {
                          "color": "#808080",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "marginRight": 20,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Its elongated fruit is juicy and very rich in water. Its green color is eaten raw, pickled in salt or pickled.The plant originated in India, where humans began growing it about 3, 000 years ago.Today, cucumber is a very common vegetable, and it is grown in greenhouses or open fields.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fff",
                    "borderRadius": 2,
                    "flexDirection": "row",
                    "paddingBottom": 10,
                    "paddingLeft": 15,
                    "paddingRight": 15,
                    "paddingTop": 10,
                  },
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.5}
                bordered={true}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderBottomWidth": 1,
                    "borderColor": "#007aff",
                    "borderLeftWidth": 1,
                    "borderRadius": 5,
                    "borderRightWidth": 1,
                    "borderTopWidth": 1,
                    "borderWidth": 1,
                    "elevation": null,
                    "flexDirection": "row",
                    "height": 45,
                    "justifyContent": "space-between",
                    "paddingBottom": 6,
                    "paddingTop": 6,
                    "shadowColor": null,
                    "shadowOffset": null,
                    "shadowOpacity": null,
                    "shadowRadius": null,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#007aff",
                        "fontFamily": "System",
                        "fontSize": 16.5,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                      },
                      Object {
                        "fontFamily": "Comfortaa_600SemiBold",
                      },
                    ]
                  }
                  uppercase={false}
                >
                  Start Grow !
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </ScrollView>
      </SafeAreaView>
    </View>
  </View>
</View>
`;

exports[`PlantPage component Test render plant page component without start grow button snapshot 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "height": 1334,
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
          }
        }
      >
        <ScrollView
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            Array [
              Object {
                "padding": undefined,
              },
              undefined,
            ]
          }
          contentInset={
            Object {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={false}
          enableResetScrollToCoords={true}
          extraHeight={75}
          extraScrollHeight={0}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="handled"
          keyboardSpace={0}
          resetScrollToCoords={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          scrollEventThrottle={1}
          showsVerticalScrollIndicator={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            }
          }
          viewIsInsideTabBar={false}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "borderBottomWidth": 0.5,
                  "borderColor": "#ccc",
                  "borderLeftWidth": 0.5,
                  "borderRadius": 2,
                  "borderRightWidth": 0.5,
                  "borderTopWidth": 0.5,
                  "elevation": 3,
                  "flexWrap": "nowrap",
                  "marginBottom": 5,
                  "marginLeft": 2,
                  "marginRight": 2,
                  "marginTop": 5,
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.1,
                  "shadowRadius": 1.5,
                },
                Object {
                  "flex": 0,
                  "marginTop": 10,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fff",
                    "borderRadius": 2,
                    "flexDirection": "row",
                    "paddingBottom": 10,
                    "paddingLeft": 15,
                    "paddingRight": 15,
                    "paddingTop": 10,
                  },
                  Object {
                    "borderBottomColor": "#A1DEC0",
                    "borderBottomWidth": 1,
                    "borderStyle": "solid",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": null,
                      "alignSelf": "center",
                      "flex": 1,
                      "marginLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontFamily": "System",
                          "fontSize": 16,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Treatment:
                  </Text>
                  <Text
                    note={true}
                    style={
                      Array [
                        Object {
                          "color": "#808080",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "marginRight": 20,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Water the cucumbers until the soil is thoroughly absorbed and maintain this moisture at all times.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fff",
                    "borderRadius": 2,
                    "flexDirection": "row",
                    "paddingBottom": 10,
                    "paddingLeft": 15,
                    "paddingRight": 15,
                    "paddingTop": 10,
                  },
                  Object {
                    "borderBottomColor": "#A1DEC0",
                    "borderBottomWidth": 1,
                    "borderStyle": "solid",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "stretch",
                    "flex": 1,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://img.wcdn.co.il/f_auto,w_1200,t_54/1/4/9/8/1498895-46.jpg",
                    }
                  }
                  style={
                    Object {
                      "height": 350,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderRadius": 2,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": null,
                      "alignSelf": "center",
                      "flex": 1,
                      "marginLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontFamily": "System",
                          "fontSize": 16,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Some words on it:
                  </Text>
                  <Text
                    note={true}
                    style={
                      Array [
                        Object {
                          "color": "#808080",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "marginRight": 20,
                        },
                        Object {
                          "fontFamily": "Comfortaa_600SemiBold",
                        },
                      ]
                    }
                    uppercase={false}
                  >
                    Its elongated fruit is juicy and very rich in water. Its green color is eaten raw, pickled in salt or pickled.The plant originated in India, where humans began growing it about 3, 000 years ago.Today, cucumber is a very common vegetable, and it is grown in greenhouses or open fields.
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ScrollView>
      </SafeAreaView>
    </View>
  </View>
</View>
`;
